Some compile dependency example

--- a/compile_dependencies/Makefile
+++ b/compile_dependencies/Makefile
@@ -1,4 +1,5 @@
 all:
 	mix xref graph
 	mix clean && mix compile --verbose --no-all-warnings
-	mix xref graph --source lib/c3.ex --sink lib/c3.ex
+	# This shows that client_one.ex depends on lib/c3.ex
+	mix xref graph --source lib/client_one.ex --sink lib/c3.ex
